test/speedtest/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: docker.io/e7db/speedtest@sha256:b56566b6023e878ac5e31571b9dc945908182d9acbfd76b830e5122cc591290e
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 0m
            memory: 10Mi
          limits:
            cpu: 4000m
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  selector:
    app: speedtest
  ports:
  - name: http
    port: 80
